<resources>
    <string name="app_name">Popular Movies</string>
    <string name="fav_movies">Favourite Movies</string>
    <string name="action_setting">Settings</string>
    <string name="movie_details">Movie Details</string>
    <string name="size">10</string>
    <string name="Title">Title</string>
    <string name="Release">Release Date</string>
    <string name="Synopsis">Synopsis</string>
    <string name="favourites">Favourites</string>
    <string name="share">Share</string>
    <string name="_100">100</string>
    <string name="reviews">Reviews</string>
    <string name="trailers">Trailers</string>
    <string name="author">Author</string>
    <string name="content">Content</string>
    <string name="play_trailer">Play Trailer</string>
    <string name="top_rated">Top Rated</string>
    <string name="popular">Popular</string>
    <string name="todo">TODO</string>
    <string name="trailer1">Trailer 1</string>
    <string name="imageloading">Image Loading</string>
    <string name="save">Like</string>
    <string name="unsave">Unlike</string>

</resources>
