<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DetailsActivity"
    tools:showIn="@layout/activity_details">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/movie_details_footer">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2.5">

                <Button
                    android:id="@+id/movie_detail_fav"
                    android:layout_width="43dp"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/detail_title"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:background="@color/colorPrimary"
                    android:text="@string/save"
                    android:textColor="@color/colorBackground" />

                <com.github.florent37.shapeofview.shapes.ArcView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:arc_cropDirection="outside"
                    app:arc_height="24dp"
                    app:arc_position="bottom"
                    app:diagonal_angle="10"
                    app:diagonal_direction="left"
                    app:diagonal_position="bottom">

                    <ImageView
                        android:id="@+id/details_poster"
                        android:layout_width="match_parent"
                        android:layout_height="320dp"
                        android:contentDescription="@string/imageloading"
                        android:scaleType="fitXY" />

                </com.github.florent37.shapeofview.shapes.ArcView>

                <com.github.florent37.shapeofview.shapes.CircleView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="end|top"
                    android:layout_marginTop="10dp"
                    android:padding="2dp"
                    app:circle_borderColor="@color/colorBackground"
                    app:circle_borderWidth="2dp"
                    tools:targetApi="LOLLIPOP">

                    <TextView
                        android:id="@+id/details_vote"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/colorPrimary"
                        android:padding="8dp"
                        android:text="@string/size"
                        android:textColor="@color/colorBackground"
                        android:textColorHighlight="@color/colorAccent"
                        android:textSize="20sp" />

                </com.github.florent37.shapeofview.shapes.CircleView>

                <ImageView
                    android:id="@+id/movie_detail_poster_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:background="@color/colorPrimary"
                    android:contentDescription="@string/todo"
                    android:padding="1dp" />


                <TextView
                    android:id="@+id/detail_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_above="@id/detail_release_date"
                    android:layout_toEndOf="@id/movie_detail_poster_image"
                    android:layout_toRightOf="@id/movie_detail_poster_image"
                    android:background="@color/colorPrimaryLight"
                    android:paddingEnd="6dp"
                    android:paddingLeft="6dp"
                    android:paddingRight="6dp"
                    android:paddingStart="6dp"
                    android:text="@string/Title"
                    android:textColor="@color/colorBackground"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/detail_release_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="2dp"
                    android:layout_toEndOf="@id/movie_detail_poster_image"
                    android:layout_toRightOf="@id/movie_detail_poster_image"
                    android:background="@color/colorPrimaryLight"
                    android:paddingEnd="4dp"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:paddingStart="4dp"
                    android:text="@string/Release"
                    android:textColor="@color/colorLabel"
                    android:textSize="14sp" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorBackground"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingEnd="4dp"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:paddingStart="4dp"
                    android:text="@string/Synopsis"
                    android:textColor="@color/colorLabel"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/detail_synopsis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:background="@color/colorBackground"
                    android:paddingEnd="4dp"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:paddingStart="4dp"
                    android:text="@string/Synopsis"
                    android:textColor="@color/Text" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/movie_details_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/movie_detail_play_trailer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="1dp"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/trailers"
            android:textColor="@color/colorBackground" />

        <Button
            android:id="@+id/reviews_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/reviews"
            android:textColor="@color/colorBackground" />


    </LinearLayout>
</RelativeLayout>

